--- a/src/styles/Application.module.scss
+++ b/src/styles/Application.module.scss
@@ -1,3 +1,16 @@
-.test{
-	background-color: default;
+*, ::before, ::after {
+    box-sizing: border-box;
+}
+* {
+    margin: 0px;
+    padding: 0px;
+    border-spacing: 0px;
+}
+
+html, body {
+	height: 100%;
+    display: block;
+}
+.scssTest {
+	background-color: inherit;
 }
