--- a/src/styles/Application.module.scss
+++ b/src/styles/Application.module.scss
@@ -9,8 +9,6 @@
 
 html, body {
 	height: 100%;
-    display: block;
-}
-.scssTest {
-	background-color: inherit;
+	display: block;
+	background-color: black;
 }
