adding some content to the website

--- a/src/styles/Application.module.scss
+++ b/src/styles/Application.module.scss
@@ -12,3 +12,11 @@ html, body {
 	display: block;
 	background-color: #94E5FF;
 }
+
+
+ol{
+	list-style-position: inside;
+}
+li {
+	line-height: 1.6;
+}
